--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,24 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .App {
+  padding-bottom: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 0 10%;
+  overflow: hidden;
 }
 
 .title {
