--- a/src/components/Modal/index.css
+++ b/src/components/Modal/index.css
@@ -43,3 +43,11 @@
   overflow-y: scroll;
   overflow-x: hidden;
 }
+
+.closeButton {
+  position: fixed;
+  right: 15px;
+  top: 15px;
+  color: white;
+  cursor: pointer;
+}
